add mailman installation along with its vhost

--- a/requirements.yml
+++ b/requirements.yml
@@ -3,4 +3,8 @@
   name: selinux
 - src: https://github.com/OSAS/ansible-role-openssh.git
   name: openssh
+- src: https://gitlab.com/osas/ansible-role-mailman3.git
+  name: mailman3
+- src: https://github.com/OSAS/ansible-role-httpd
+  name: httpd
 
