--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -25,3 +25,20 @@
       enabled: yes
       state: started
 
+- hosts: mailing
+  roles:
+  - role: mailman3
+    mailman_webui_basedir: /var/www/mailman
+    mailman_domains:
+      - lists.ovirt.org
+    mailman_http_vhost: lists.ovirt.org
+  - role: httpd
+    website_domain: lists.ovirt.org
+    document_root: /var/www/mailman
+    # TODO: generate cert
+    #force_tls: True
+    #use_tls: True
+    wsgi_script: /var/www/mailman/config/webui.wsgi
+    wsgi_user: mailman
+    allow_app_signals: True
+
