--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -5,29 +5,10 @@
   - selinux
   - openssh
 
-- hosts: pgsql-server
-  tasks:
-  - name: install PostgreSQL and psycopg2 for the ansible module
-    yum:
-      pkg: "{{ item }}"
-      state: present
-    with_items:
-      - python-psycopg2
-      - postgresql
-      - postgresql-server
-  - stat:
-      path: "/var/lib/pgsql/data/postgresql.conf"
-    register: st
-  - command: "postgresql-setup initdb"
-    when: not st.stat.exists
-  - service:
-      name: postgresql
-      enabled: yes
-      state: started
-
 - hosts: mailing
   roles:
   - role: memcached
+  - role: postgresql
   - role: mailman3
     mailman_webui_basedir: /var/www/mailman
     mailman_domains:
