--- a/requirements.yml
+++ b/requirements.yml
@@ -9,6 +9,8 @@
   name: postgresql
 - src: https://gitlab.com/osas/ansible-role-mailman3.git
   name: mailman3
+- src: https://gitlab.com/osas/ansible-role-postgrey.git
+  name: postgrey
 - src: https://github.com/OSAS/ansible-role-httpd
   name: httpd
 
