added support for guest_virt_tools role

--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,8 @@
   name: selinux
 - src: https://github.com/OSAS/ansible-role-openssh.git
   name: openssh
+- src: https://gitlab.com/osas/ansible-role-guest_virt_tools.git
+  name: guest_virt_tools
 - src: https://gitlab.com/osas/ansible-role-memcached.git
   name: memcached
 - src: https://gitlab.com/osas/ansible-role-postgresql.git
