--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,7 +18,7 @@ pattern        = *
 forks          = 10
 poll_interval  = 15
 sudo_user      = root
-ask_sudo_pass  = True
+#ask_sudo_pass  = True
 #ask_pass      = True
 transport      = smart
 #remote_port    = 22
