install global TLS certificates

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -5,6 +5,31 @@
   - guest_virt_tools
   - selinux
   - openssh
+  tasks:
+  - name: install public certificate files
+    copy:
+      src: "tls/{{ item }}"
+      dest: "/etc/pki/tls/certs/{{ item }}"
+      owner: root
+      group: root
+      mode: 0644
+    with_items:
+      - star_ovirt_org.crt
+      - star_ovirt_org.ca.crt
+    notify: generate bundle certificate file
+  - name: install private certificate files
+    copy:
+      src: "tls/{{ item }}"
+      dest: "/etc/pki/tls/private/{{ item }}"
+      owner: root
+      group: root
+      mode: 0600
+    with_items:
+      - star_ovirt_org.key
+    notify: generate bundle certificate file
+  handlers:
+  - name: generate bundle certificate file
+    shell: "cat /etc/pki/tls/certs/star_ovirt_org.crt /etc/pki/tls/certs/star_ovirt_org.ca.crt >/etc/pki/tls/certs/star_ovirt_org.bundle.crt"
 
 - hosts: mailing
   roles:
