use new 'sasldb' role to manage local mail users

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -68,6 +68,9 @@
     whitelist_clients:
       - gerrit.ovirt.org
       - redhat.com
+  - role: sasldb
+    user_create: "{{ local_mail_accounts }}"
+    db_group: mail
   - role: postfix
     myhostname: "lists.ovirt.org"
     mydestination: 
