--- a/requirements.yml
+++ b/requirements.yml
@@ -17,6 +17,8 @@
   name: postgrey
 - src: https://gitlab.com/osas/ansible-role-postfix.git
   name: postfix
+- src: https://gitlab.com/osas/ansible-role-sasldb.git
+  name: sasldb
 - src: https://github.com/OSAS/ansible-role-httpd
   name: httpd
 
