--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -46,6 +46,12 @@
   roles:
   - role: mailman3
     site_owner_email: "root@ovirt.org"
+    site_admins:
+      - "duck"
+      - "duck-rh"
+      - "misc"
+      - "eedri"
+      - "ederevea"
     from_email: "listmaster@ovirt.org"
     webui_name: "oVirt List Archives"
     webui_basedir: /var/www/mailman
