update contact@ alias to use infra-private@
Team managed is better.
Message may contain private information so using -private.

Change-Id: I07ce78ad197e920cadd094a04c40fb2387bffd5d

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -94,9 +94,7 @@
       support: postmaster
       # trap decode to catch security attacks
       decode: root
-      ## This should be updated to a group alias or other scheme
-      ## for oVirt infrastructure sharing
-      contact: misc@redhat.com
+      contact: infra-private@ovirt.org
       # aliases that jira would use
       infra-support: jira
       community: bproffit@redhat.com
