use monitoring.ovirt.org to reach PHX hosts now
Change-Id: I8293970be2d0a4d19a20eba7840ac82e0ad539d7

--- a/group_vars/phx_firewalld.yml
+++ b/group_vars/phx_firewalld.yml
@@ -1,2 +1,2 @@
 ---
-ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q foreman.ovirt.org"'
+ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q monitoring.ovirt.org"'
