enable Ansible pipelining
Change-Id: I358077da81058a2ab290cf0e2d4063e337a1e021

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -210,6 +210,7 @@ ssh_args = -o ControlMaster=auto -o ControlPersist=30m
 # sudoers configurations that have requiretty (the default on many distros).
 # 
 #pipelining = False
+pipelining = True
 
 # if True, make ansible use scp if the connection type is ssh 
 # (default is sftp)
