moved ovirt-web-builder.osci.io from OSCI repository
Change-Id: Ie831c35359d1a38527d0fd2851e4907f69d97805

--- a/hosts.yml
+++ b/hosts.yml
@@ -2,13 +2,23 @@
 all:
   hosts:
     mail.phx.ovirt.org:
+    ovirt-web-builder.osci.io:
 
   children:
-    phx_firewalld:
+    phx_zone:
       hosts:
         mail.phx.ovirt.org:
+
+    # zone managed by OSAS in the Community Cage project
+    osci_zone:
+      hosts:
+        ovirt-web-builder.osci.io:
 
     mailing:
       hosts:
         mail.phx.ovirt.org:
+
+    web_builders:
+      hosts:
+        ovirt-web-builder.osci.io:
 
