activate YUM unattended updates
Change-Id: I1e1fb1c6c2b9f6aee021882451701843b553a25c

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -6,6 +6,7 @@
   - guest_virt_tools
   - selinux
   - openssh
+  - unattended_updates
 
 # using phases to ensure handlers are called and deps are really ready
 #
